# github-template-rust-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: checks.yml  pr.yml  release.yml
docs/: installation.md  release.md  testing.md
scripts/: checks.sh  replace_templates.sh
src/: args.rs  config.rs  constants.rs  env_vars.rs  error.rs  main.rs
src/commands/: mod.rs  run.rs  upgrade.rs
tests/: integration_test.rs
tests/commands/: mod.rs
tests/commands/run/: mod.rs
tests/support/: mod.rs
