[package]
name = "__TEMPLATE_PACKAGE_NAME__"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI application"
repository = "https://github.com/__TEMPLATE_REPO_OWNER__/__TEMPLATE_REPO__"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
indicatif = "0.17"
directories = "5.0"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
